--- a/MoneyPool/Base.lproj/Main.storyboard
+++ b/MoneyPool/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GAl-3C-bDH">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GAl-3C-bDH">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -76,13 +76,13 @@
                                                             <rect key="frame" x="491" y="0.0" width="77" height="45"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Left" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="33w-c2-mD0">
-                                                                    <rect key="frame" x="26" y="0.0" width="26" height="17"/>
+                                                                    <rect key="frame" x="26" y="0.0" width="26" height="25"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="$1,500.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWC-NL-cTQ">
-                                                                    <rect key="frame" x="0.0" y="17" width="77" height="28"/>
+                                                                    <rect key="frame" x="0.0" y="25" width="77" height="21"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -180,13 +180,13 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="coh-XZ-QJZ">
                                                             <rect key="frame" x="516" y="0.0" width="52" height="46"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PGg-mm-Kkg">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PGg-mm-Kkg">
                                                                     <rect key="frame" x="10" y="0.0" width="32" height="17"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="2 Days" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B9j-JS-IAf">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="2 Days" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B9j-JS-IAf">
                                                                     <rect key="frame" x="0.0" y="17" width="52" height="29"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -667,5 +667,120 @@
             </objects>
             <point key="canvasLocation" x="3120" y="1118"/>
         </scene>
+        <!--Login View Controller-->
+        <scene sceneID="xrg-eW-Rll">
+            <objects>
+                <viewController id="yzA-rN-AHO" customClass="LoginViewController" customModule="MoneyPool" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Gih-A6-URc"/>
+                        <viewControllerLayoutGuide type="bottom" id="BOn-Iq-bfb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rHA-6o-gAI">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w1I-v6-9co">
+                                <rect key="frame" x="49" y="123" width="46" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rln-Vd-Vz1">
+                                <rect key="frame" x="141" y="114" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="z9V-m4-6j7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="odL-xg-swd">
+                                <rect key="frame" x="141" y="151" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="sDg-O5-3S6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aKX-4v-Zdo">
+                                <rect key="frame" x="214" y="254" width="127" height="30"/>
+                                <color key="backgroundColor" red="0.01448529214" green="0.67625015970000002" blue="0.99627298119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="127" id="ykc-HU-RpA"/>
+                                </constraints>
+                                <state key="normal" title="SIGN UP!">
+                                    <color key="titleColor" red="0.99607473609999997" green="0.9922029376" blue="0.99199241400000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="registerTappedButton:" destination="yzA-rN-AHO" eventType="touchUpInside" id="H7N-P4-NG7"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uog-8w-hfN">
+                                <rect key="frame" x="49" y="160" width="79" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ms3-bS-yi6">
+                                <rect key="frame" x="49" y="206" width="292" height="30"/>
+                                <color key="backgroundColor" red="0.086820356550000005" green="0.3995097876" blue="0.17422801260000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="292" id="xXd-v4-TIw"/>
+                                </constraints>
+                                <state key="normal" title="LOGIN">
+                                    <color key="titleColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="loginTappedButton:" destination="yzA-rN-AHO" eventType="touchUpInside" id="6YB-5A-pLM"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not a user yet?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jxk-kG-7jz">
+                                <rect key="frame" x="49" y="266" width="128.5" height="23"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WELCOME to MONEYPOOL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FLd-6X-6gA">
+                                <rect key="frame" x="81" y="66" width="218" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Jxk-kG-7jz" firstAttribute="top" secondItem="ms3-bS-yi6" secondAttribute="bottom" constant="30" id="2KO-ny-9Ts"/>
+                            <constraint firstItem="FLd-6X-6gA" firstAttribute="leading" secondItem="rHA-6o-gAI" secondAttribute="leadingMargin" constant="61" id="73R-ue-OLk"/>
+                            <constraint firstItem="aKX-4v-Zdo" firstAttribute="top" secondItem="ms3-bS-yi6" secondAttribute="bottom" constant="18" id="CLR-DS-0IX"/>
+                            <constraint firstItem="w1I-v6-9co" firstAttribute="top" secondItem="FLd-6X-6gA" secondAttribute="bottom" constant="36.5" id="Clb-UD-jbW"/>
+                            <constraint firstItem="FLd-6X-6gA" firstAttribute="top" secondItem="Gih-A6-URc" secondAttribute="bottom" constant="46" id="E4o-Oj-bND"/>
+                            <constraint firstItem="ms3-bS-yi6" firstAttribute="leading" secondItem="Uog-8w-hfN" secondAttribute="leading" id="Ftf-vb-PDl"/>
+                            <constraint firstItem="Rln-Vd-Vz1" firstAttribute="leading" secondItem="w1I-v6-9co" secondAttribute="trailing" constant="46" id="JHh-hy-zUv"/>
+                            <constraint firstItem="Jxk-kG-7jz" firstAttribute="leading" secondItem="ms3-bS-yi6" secondAttribute="leading" id="KLr-nf-8Xl"/>
+                            <constraint firstItem="Uog-8w-hfN" firstAttribute="leading" secondItem="w1I-v6-9co" secondAttribute="leading" id="Lkf-8a-UKY"/>
+                            <constraint firstItem="aKX-4v-Zdo" firstAttribute="trailing" secondItem="ms3-bS-yi6" secondAttribute="trailing" id="O1R-td-VgS"/>
+                            <constraint firstItem="odL-xg-swd" firstAttribute="leading" secondItem="Rln-Vd-Vz1" secondAttribute="leading" id="Sq5-Ga-Qbp"/>
+                            <constraint firstItem="Uog-8w-hfN" firstAttribute="top" secondItem="w1I-v6-9co" secondAttribute="bottom" constant="16" id="cwu-hz-MhT"/>
+                            <constraint firstItem="Rln-Vd-Vz1" firstAttribute="top" secondItem="FLd-6X-6gA" secondAttribute="bottom" constant="27.5" id="lpz-kq-0c1"/>
+                            <constraint firstItem="odL-xg-swd" firstAttribute="top" secondItem="Rln-Vd-Vz1" secondAttribute="bottom" constant="7" id="wlH-A1-kIo"/>
+                            <constraint firstItem="ms3-bS-yi6" firstAttribute="top" secondItem="odL-xg-swd" secondAttribute="bottom" constant="25" id="xih-fg-uFb"/>
+                            <constraint firstItem="w1I-v6-9co" firstAttribute="leading" secondItem="rHA-6o-gAI" secondAttribute="leadingMargin" constant="29" id="yNa-kU-1SP"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="Rln-Vd-Vz1" id="TIK-ih-ngH"/>
+                        <outlet property="loginButton" destination="ms3-bS-yi6" id="liU-gc-hLu"/>
+                        <outlet property="notUserLabel" destination="Jxk-kG-7jz" id="v8t-Np-oHu"/>
+                        <outlet property="passwordTextfield" destination="odL-xg-swd" id="QH3-gS-k54"/>
+                        <outlet property="signupButton" destination="aKX-4v-Zdo" id="2fU-uW-3rw"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="showMainViewController" id="92e-02-xic"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4pF-4e-peq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2432" y="1098"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="92e-02-xic"/>
+    </inferredMetricsTieBreakers>
 </document>
